--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1></h1>
+    <div class="container">
+        <div>
+            <img class="banner" src="image/banner.jpg" alt="">
+            <h1 class="heading">Welcome to Dragon Ball'Z World</h1>
+        </div>
+    </div>
 </body>
 </html>
