--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
     <div class="container">
         <div>
             <img class="banner" src="image/banner.jpg" alt="">
-            <h1 class="heading">Welcome to Dragon Ball'Z World</h1>
+            <h1 class="heading">Welcome to Dragon Ball World</h1>
         </div>
+    </div>
+
+    <div class="goku">
+        <h1 class="goku-title">Goku</h1>
+        <img class="gokumage" src="image/goku1.png" alt="">
+        <p class="para">Goku, and Dragon Ball in general, evolved from one of Akira Toriyama's earlier one-shot series called Dragon Boy. In this story, the protagonist looks a lot like Goku, but has a pair of wings.The original inspiration was Hong Kong martial arts films, including Bruce Lee films such as Enter the Dragon (1973) and Jackie Chan films such as Drunken Master (1978); Toriyama said he had a young Jackie Chan in mind for a live-action Goku, stating that "nobody could play Goku but him."[7]The character Goku is based on Sun Wukong (Son Goku in Japanese),[nb 6] the central character of the Chinese novel Journey to the West.[8] To be creative with the idea of Sun Wukong, Toriyama designed Goku as a human boy with a monkey's tail, rather than a complete simian, because the tail would give the character a distinguishing feature.[9] He later stated that the tail was a pain to draw, hence why he had it get cut off early on.[10] Toriyama did not initially plan to make Goku an alien, it was not until the introduction of fighters from other planets that he established him as a Saiyan[nb 7][nb 8].[11] Goku was given the ability to teleport to any planet in seconds, so that Toriyama could increase the pace of the story.[12]</p>
     </div>
 </body>
 </html>
